doel toegevoegd hieke

--- a/hieke_ontwikkeling.html
+++ b/hieke_ontwikkeling.html
@@ -53,7 +53,7 @@
                 Daarna volgt of ik uiteindleijk dit doel heb behaald en zo ja, hoe?
             </p>
             <h4>Je toont veel initiatief en betrokkenheid</h4>
-            <p>Binnen de komende 5 maanden zal ik mijn leervermogen verbeteren door actief feedback en zelfreflectie te integreren in mijn dagelijkse taken, meetbaar aan de hand van regelmatige evaluaties en aanpassingen om mijn professionele ontwikkeling te bevorderen.
+            <p>Doel: Binnen de komende 5 maanden zal ik mijn leervermogen verbeteren door actief feedback en zelfreflectie te integreren in mijn dagelijkse taken, meetbaar aan de hand van regelmatige evaluaties en aanpassingen om mijn professionele ontwikkeling te bevorderen.
             </p>
             <p>Recentelijk heb ik succesvol betrokkenheid binnen mijn groep en tijdens de lessen van de minor gedemonstreerd.
                 Mijn bijdrage was opvallend, met actieve deelname aan kleine opdrachten tijdens de lessen en het initiëren van leiderschap wanneer anderen vastliepen bij het bepalen van onze koers.
@@ -63,7 +63,7 @@
             </p>
 
             <h4>Je meningen zijn of adviezen zijn gebasseerd op gedegen onderzoek</h4>
-            <p>Binnen de komende 5 maanden streef ik ernaar mijn meningen en adviezen te versterken door gedegen onderzoek toe te passen, gemeten aan de hand van regelmatige raadpleging van betrouwbare bronnen en die informatief actief te integreren, met als doel mijn professionele besluitvorming te verbeteren.
+            <p>Doel: Binnen de komende 5 maanden streef ik ernaar mijn meningen en adviezen te versterken door gedegen onderzoek toe te passen, gemeten aan de hand van regelmatige raadpleging van betrouwbare bronnen en die informatief actief te integreren, met als doel mijn professionele besluitvorming te verbeteren.
             </p>
             <p>Tijdens onze opdracht bij Giesbers heb ik de leiding genomen in het verkennen van diverse digitaliseringsmogelijkheden die relevant zijn voor het gebruik bij Giesbers.
                 Na uitvoerig onderzoek heb ik mijn bevindingen en aanbevelingen met mijn groep gedeeld, omdat ik alles van tevoren grondig had onderzocht en kon onderbouwen.
@@ -75,7 +75,7 @@
             </p>
 
             <h4>Je kiest ambitieuze leerdoelen en verkent disciplines buiten je eigen vakgebeid</h4>
-            <p>In de komende 5 maanden wil ik mijn kennis van HTML verbeteren de lessen waarbij HTML gebruikt wordt aandachtig te volgen, met als uiteindelijk meetbaar resultaat het succesvol ontwerpen van een eenvoudige webpagina.
+            <p>Doel: In de komende 5 maanden wil ik mijn kennis van HTML verbeteren de lessen waarbij HTML gebruikt wordt aandachtig te volgen, met als uiteindelijk meetbaar resultaat het succesvol ontwerpen van een eenvoudige webpagina.
             </p>
             <p>In de Smart Connectie-lessen heb ik mijn eerste kennismaking gehad met HTML en de toepassingen ervan.
                 Ik heb stap voor stap geleerd hoe ik met HTML een website kan aanpassen en creëren, te beginnen met eenvoudige taken zoals het toevoegen van afbeeldingen of het vergroten van tekst.
@@ -88,7 +88,7 @@
             </p>
 
             <h4>Je bent bewust bezig met je persoonlijke groei</h4>
-            <p>Binnen de komende 5 maanden zal ik mijn bewuste betrokkenheid bij persoonlijke ontwikkeling vergroten door regelmatig zelfreflectie, het identificeren van specifieke groeikansen en actieve deelname aan relevante workshops, meetbaar aan de hand van het vastleggen van leerervaringen en behaalde persoonlijke mijlpalen.
+            <p>Doel: Binnen de komende 5 maanden zal ik mijn bewuste betrokkenheid bij persoonlijke ontwikkeling vergroten door regelmatig zelfreflectie, het identificeren van specifieke groeikansen en actieve deelname aan relevante workshops, meetbaar aan de hand van het vastleggen van leerervaringen en behaalde persoonlijke mijlpalen.
             </p>
             <p>Tijdens mijn tijd bij Giesbers werd sterk benadrukt dat het naast het formele verslag ook belangrijk was om een persoonlijke reflectie bij te houden, waarin je jouw persoonlijke en professionele ontwikkeling beschrijft.
                 Ik heb dit advies opgevolgd en nu, terugkijkend, merk ik op dat ik aanzienlijke groei heb doorgemaakt, zowel op persoonlijk als professioneel vlak.
@@ -105,7 +105,7 @@
             </p>
 
             <h4>Je gebruikt feedback en zelfreflectie om te leren</h4>
-            <p>Binnen de komende 5 maanden zal ik mijn leervermogen verbeteren door actief feedback en zelfreflectie te integreren in mijn dagelijkse taken, meetbaar aan de hand van regelmatige evaluaties en aanpassingen om mijn professionele ontwikkeling te bevorderen.
+            <p>Doel: Binnen de komende 5 maanden zal ik mijn leervermogen verbeteren door actief feedback en zelfreflectie te integreren in mijn dagelijkse taken, meetbaar aan de hand van regelmatige evaluaties en aanpassingen om mijn professionele ontwikkeling te bevorderen.
             </p>
             <p> Met name gedurende de periode waarin ik met mijn groep bij Giesbers werkzaam was, heb ik talrijke mogelijkheden benut om mijn vaardigheden te verbeteren.
                 Tijdens overlegmomenten met Nigel en Dries heb ik herhaaldelijk zowel persoonlijk als professioneel advies gevraagd.
@@ -118,7 +118,7 @@
             </p>
 
             <h4>Je helpt andere actief groeien</h4>
-            <p>Binnen de komende 5 maanden zal ik mij actief inzetten om anderen te helpen groeien door regelmatig mijn kennis en ervaring te delen, meetbaar aan de hand van positieve feedback en waarneembare vooruitgang bij mijn collega's, met als doel een stimulerende bijdrage te leveren aan hun professionele ontwikkeling.
+            <p>Doel: Binnen de komende 5 maanden zal ik mij actief inzetten om anderen te helpen groeien door regelmatig mijn kennis en ervaring te delen, meetbaar aan de hand van positieve feedback en waarneembare vooruitgang bij mijn collega's, met als doel een stimulerende bijdrage te leveren aan hun professionele ontwikkeling.
             </p>
             <p>Mijn expertise ligt binnen het technische gebied, en aanvankelijk daarvan kon ik bij Giesbers mijn ervaringen goed benutten omdat deze aansloten bij dit vakgebied.
                 Aan de andere kant had een van mijn groepsgenoten geen enkele voorkennis in dit vakgebied, waardoor ik haar kon bijstaan met inzichten door uitleg te geven over hoe het bouwproces doorgaans verloopt.
