laatste aanpassingen hieke

--- a/hieke_ontwikkeling.html
+++ b/hieke_ontwikkeling.html
@@ -126,6 +126,54 @@
                 Ook bij de competentie dat meningen en adviezen gebaseerd moeten zijn op gedegen onderzoek staat vermeld: "Voorkennis civiele techniek".
                 Deze feedback bevestigt voor mij dat mijn inspanningen daadwerkelijk vruchten hebben afgeworpen.
             </p>
+            <h2>Feedback vanuit mijn groepsgenoten</h2>
+            <p> Tijdens de les dat iedereen formulieren kreeg om aan elkaar feedback te geven kon ik helaas niet aanwezig zijn.
+                Met deze reden heb ik Matilda en Tomas geappt of zij hun feedback aan mij wouder doorsturen.
+                Vervolgens heb ik zelf thuis het feedbackformulier voor Matilda en Tomas ingevuld.
+                De feedback die ik heb gekregen heb ik deels hierboven verwertk.
+                Tijdens de eind zelfassesment die wij online met elkaar gehouden hebben. 
+                Kreeg ik nogmaals te horen van mijn groepsgenoten dat zij het eens waren met mijn eigen zelfreflectie. 
+                Dit was erg fijn omdat dit bevestigd dat ik ook heb gedaan wat ik denk dat ik heb gedaan.
+            </p>
+            <h4>Feedbackformulier foto's</h4>
+            <img class="logo" src="Hieke\afbeelding\feedback matilda 1.jpg" alt="naam" width="400" height="300">  
+            <img class="logo" src="Hieke\afbeelding\feedback matilda 2.jpg" alt="naam" width="400" height="300">  
+            <img class="logo" src="Hieke\afbeelding\feedback tomas 1.jpg" alt="naam" width="400" height="300">  
+            <img class="logo" src="Hieke\afbeelding\feedback Tomas 2.jpg" alt="naam" width="400" height="300">  
+        <h2>Eerdere zelfreflectie met competenties</h2>
+            <p> In dit hoofstuk staat mijn tussentijdse zelfreflectie beschreven.
+                Deze reflectie vind plaats tijdens de minor en niet tijdens Giesbers.
+                Hierbij ging ik iedere competentie af hoe ik ervoor stond.
+            </p>
+            <h4>Je toont veel initiatief en betrokkenheid:</h4>
+            <p>Ik heb in het begin nog veel moeten wennen aan alle verschillende nieuwe manieren dus ben ik nog veel aan het observeren.
+                Hierin zou ik dus meer betrokken kunnen worden door mezelf meer te mengen en open te stellen.
+            </p>
+
+            <h4>Je meningen zijn of adviezen zijn gebasseerd op gedegen onderzoek:</h4>
+            <p>Ik ben geneigd om eerst te weten waarover ik praat voordat ik me meng in het gesprek.
+                Bijvoorbeeld heb ik bij de kookles eerst opgezocht voor een mogelijk gerecht en hoe je deze moest maken en daarna mijn mening pas gegeven. 
+            </p>
+
+            <h4>Je kiest ambitieuze leerdoelen en verkent disciplines buiten je eigen vakgebeid:</h4>
+             <p>Ik ben zelf een civiele techniek studente waardoor ik veel disciplines verken buiten mijn vakgebied.
+                Zo merk ik met het programmeren van het plant bewateringssysteem dat ik uit mezelf verder verdiep in hoe het werkt
+             </p>
+
+            <h4>Je bent bewust bezig met je persoonlijke groei:</h4>
+            <p>Met mijn persoonlijke groei ben ik zeer bewust bezig, omdat ik iedere dag van deze minor weer wat nieuws leer.
+                Niet alleen in het vakgebied maar ook over mezelf en hoe ik om ga met nieuwe manieren. 
+            </p>
+            <h4>Je gebruikt feedback en zelfreflectie om te leren:</h4>
+            <p> De feedback die ik afgelopen tijd heb gekregen lag vooral bij de lessen die te maken hadden met programmeren.
+                Dit is namelijk buiten mijn vakgebied.
+                Is luister dan ook met een open gedachte naar deze mensen en probeer dit mee te nemen in het vervolg.
+            </p>
+
+            <h4>Je helpt anderen actief groeien:</h4>
+            <p>Ik ben zeer actief tijdens de workshops met de mensen om mij heen.
+                Wanneer ik zie dat iemand vast loopt of wanneer ze om hulp vragen leg ik direct alles neer waar ik mee bezig ben en focus ik mij op hun vraag.
+            </p>
         </div>
     </div>
 
