--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -32,13 +32,11 @@
             </p>
                 <h4>Introductie</h4>
                     <p> Voorafgaand aan de Smart Business-les kregen we de opdracht om een video te bekijken zonder te weten wat we ermee zouden doen.
-                    In de eerste les werd uitgelegd dat we in groepen van vier een connectie moesten leggen tussen de verschillende video's.
-                    Hierdoor ontstond een puzzel waarbij we moesten bepalen welke puzzelstukjes van de filmpjes in elkaar pasten waardoor je alle filmpjes connect.
-                    Nadat we deze puzzel hadden gelegd en op een whiteboard hadden uitgebeeld, moesten we deze aan elkaar pitchen.
-                    Elke groep dacht mee en stelde vragen over waarom wij dachten dat er een connectie lag.
-                    Hieornder zie je de afbeelding van het whiteboard waar wij onze connectie op hebben gepresenteerd met tekenignen en kernwoorden.
-                    </p>
-                    <p> 2e kopje
+                        In de eerste les werd uitgelegd dat we in groepen van vier een connectie moesten leggen tussen de verschillende video's.
+                        Hierdoor ontstond een puzzel waarbij we moesten bepalen welke puzzelstukjes van de filmpjes in elkaar pasten waardoor je alle filmpjes connect.
+                        Nadat we deze puzzel hadden gelegd en op een whiteboard hadden uitgebeeld, moesten we deze aan elkaar pitchen.
+                        Elke groep dacht mee en stelde vragen over waarom wij dachten dat er een connectie lag.
+                        Hieornder zie je de afbeelding van het whiteboard waar wij onze connectie op hebben gepresenteerd met tekeningen en kernwoorden.
                     </p>
                     <img class="logo" src="images/Impact van technologie.jpg" alt="Impact van technologie" width="300" height="200">
 
