Laatste aanpassingen pagina's Matilda

--- a/Matilda/matilda_smartconnection.html
+++ b/Matilda/matilda_smartconnection.html
@@ -74,7 +74,7 @@
             database
             bijvoorbeeld. Wij hebben dit geprobeerd met Open Weather. Hubèrt heeft uitleg gegeven over de code en daarna
             konden we zelf aan de slag met de tutorial. Ik vond dit best wel lastige code, maar met een beetje hulp van
-            Brian - ik kreeg de developer console niet geopend -, is het gelukt (zie foto's hieronder).</p>
+            Brian - ik kreeg de developer console niet geopend -, is het gelukt (zie hieronder).</p>
         <!-- <p><a href="../Matilda/">API's</a></p> -->
         <iframe src="Weather.html" name="weather API">
             <p>Deze browser ondersteunt geen iFrames.</p>
