--- a/Matilda/matilda_smarttechnology.html
+++ b/Matilda/matilda_smarttechnology.html
@@ -91,7 +91,7 @@
             over AM
             in industrie, defensie, medisch, sport.</p>
 
-        <iframe src="../files/AM definitieve presentatie.pdf" name="AM presentatie">
+        <iframe src="../files/AM definitieve presentatie.pdf#view=fitH" name="AM presentatie">
             <p>Deze browser ondersteunt geen iFrames.</p>
             <p>Open deze <a href="../files/AM definitieve presentatie.pdf" target="_blank">link</a> om de presentatie in
                 te
@@ -174,30 +174,36 @@
             </div>
         </div>
         <p> Met bewijs dat de data ook naar InfluxDB geschreven wordt:</p>
-        <img src="../images/Resultaten influxdb.png">
-        </br>
-        <p>Ik ben supertrots op het eindresultaat en had van te voren nooit bedacht dat ik zelf een
-            smartwaterplantsysteem
-            werkend zou kunnen maken. Van het zelf ontwerpen van een printplaat (1), een behuizing/bakje (2) voor mijn
-            smartwaterplantsysteem en het solderen (3) en coderen (zie eindresultaat bij de workshop smart connection)
-            ervan.</p>
-        <h3>1. Printplaat</h3>
-        <img src="../images/Printplaat.png">
-        <img src="../images/Printplaat2.png">
-        <img src="../images/Printplaat3.png">
-        <h3>2. Behuizing/bakje</h3>
-        <img src="../images/Behuizing.png">
-        <img src="../images/Behuizing1.png">
-        <img src="../images/Bakje.png">
-        <h3>3. Solderen</h3>
-        <img src="../images/Solderen2.png">
-        </br>
+        <iframe src="../files/Slideshow InfluxDB.pdf" name="beelden data InfluxDB">
+            <p>Deze browser ondersteunt geen iFrames.</p>
+            <p>Open deze <a href="../files/Slideshow InfluxDB.pdf" target="_blank">link</a> om de beelden in
+                te zien.</p>
+            </iframe>
+            </br>
+            <p>Ik ben supertrots op het eindresultaat en had van te voren nooit bedacht dat ik zelf een
+                smartwaterplantsysteem
+                werkend zou kunnen maken. Van het zelf ontwerpen van een printplaat (1), een behuizing/bakje (2) voor
+                mijn
+                smartwaterplantsysteem en het solderen (3) en coderen (zie eindresultaat bij de workshop smart
+                connection)
+                ervan.</p>
+            <h3>1. Printplaat</h3>
+            <img src="../images/Printplaat.png">
+            <img src="../images/Printplaat2.png">
+            <img src="../images/Printplaat3.png">
+            <h3>2. Behuizing/bakje</h3>
+            <img src="../images/Behuizing.png">
+            <img src="../images/Behuizing1.png">
+            <img src="../images/Bakje.png">
+            <h3>3. Solderen</h3>
+            <img src="../images/Solderen2.png">
+            </br>
 
-        <script>
-            $(function () {
-                $("#nav-placeholder").load("navigatie.html");
-            });
-        </script>
+            <script>
+                $(function () {
+                    $("#nav-placeholder").load("navigatie.html");
+                });
+            </script>
 
 </body>
 
