Pagina tag toegevoegd

--- a/Matilda/matilda_smartme.html
+++ b/Matilda/matilda_smartme.html
@@ -203,10 +203,11 @@
         </br>
 
         <h3>Reflectie, Okt 24, 2023</h3>
-        Samen met Hieke en Tomas het plan van aanpak verder uitgebreid en de planning voor de komende weken ingevuld. Ik
+        <p>Samen met Hieke en Tomas het plan van aanpak verder uitgebreid en de planning voor de komende weken ingevuld. Ik
         ga deze week de interviewvragen uitwerken voor alle partijen en alvast beginnen met deskresearch voor de
         verschillende digitale systemen die gehanteerd kunnen worden in de bouw. Alle drie gaan we donderdag nog
-        reflecteren op onze doelstellingen.
+        reflecteren op onze doelstellingen.</p>
+
         <table>
             <tr>
                 <th>Competentie</th>
