Hernoemen home pagina

--- a/navigatie.html
+++ b/navigatie.html
@@ -1,6 +1,6 @@
 <body>
     <div class="navbar">
-        <a href="home.html" class="home">Smart Project</a>
+        <a href="index.html" class="home">Smart Project</a>
         <div class="dropdown-responsive">
             <div class="dropdown">
                 <button class="dropbtn matilda">Matilda
