--- a/matilda_ontwikkeling.html
+++ b/matilda_ontwikkeling.html
@@ -30,7 +30,7 @@
         <div class="description">
             <h3>Smart Me</h3>
             <p>Mijn persoonlijke professionele groei tijdens de Minor Smart Industry van 30 augustus 2023 tot en met 12 januari 2024.</p>
-            <a href="matilda/matilda_smartme.html" class="button">Lees meer</a>
+            <a href="Matilda/matilda_smartme.html" class="button">Lees meer</a>
         </div>
     </div>
     
@@ -41,7 +41,7 @@
         <div class="description">
             <h3>Competenties</h3>
             <p>Mijn eindreflectie op de competenties van de Minor Smart Industry is hier te lezen.</p>
-            <a href="matilda/matilda_competenties.html" class="button">Lees meer</a>
+            <a href="Matilda/matilda_competenties.html" class="button">Lees meer</a>
         </div>
     </div>
 
@@ -52,7 +52,7 @@
         <div class="description">
             <h3>Logboek</h3>
             <p>Hier is mijn logboek terug te lezen ter naslagwerk.</p>
-            <a href="matilda/matilda_logboek.html" class="button">Lees meer</a>
+            <a href="Matilda/matilda_logboek.html" class="button">Lees meer</a>
         </div>
     </div>
    
