verandering filmpje plant systeem

--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -121,6 +121,10 @@
                         Ik heb deze foutmelding naar meerdere personen doorgestuurd om erachter te komen hoe ik dit kon oplossen, maar helaas is dit niet gelukt.
                         Zelf had ik ook niet de kennis of vaardigheden om dit op te lossen.
                         Later in de minor, toen ik er tijd voor had, heb ik het nog een keer geprobeerd, maar helaas zonder succes.
+                        De volgende keer wanneer ik tegen een fout aanloop die te maken heeft met mijn gebrek aan kennis van het vakgebied zal ik eerder aan de bel trekken bij mensen met die de kennis wel hebben.
+                        Zo had ik er misschien voor kunnen zorgen dat mijn systeem aan het einde wel werkte.
+                        Tot slot heb ik ook een fout gemaakt bij het solderen van mijn systeem waardoor ik deze niet meer kon repareren. 
+                        Dit heeft als gevolg dat ik geen filmpje van een werkend plantbewateringssysteem kan tonen.
                     </p>
               
                 <h4>Eagle</h4>
@@ -145,6 +149,7 @@
                         Ik moet zeggen dat dit me erg goed afging en dat ik er ook veel plezier in had.
                         Hieronder zie je een afbeelding van de onderkant van mijn printplaatje nadat ik alles gesoldeerd had.
                         Door alles te solderen maakte de chip contact met het printplaatje en kon hij niet meer verschuiven.
+                        Tot slot heb ik wel zoals hierboven al benoemd een fout gemaakt bij het solderen waardoor de pcb-chip op één punt geen contact meer kon maken met het printplaatje.
                     </p>
                     <img class="logo" src="Hieke\afbeelding\solderen.jpeg" alt="naam" width="300" height="300">  
                     <img class="logo" src="Hieke\afbeelding\zijaanzicht pcb.jpeg" alt="naam" width="350" height="300"> 
