eigen website tekst toegevoegd

--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -186,6 +186,8 @@
                         Dit aspect staat haaks op mijn technische studie, wat mijn interesse in dit onderdeel van de minor heeft aangewakkerd.
                         In de allereerste les slaagde ik er al in om zelf een website te maken en aan te passen door video's en foto's toe te voegen, en tekst te wijzigen in grootte en dikte.
                         Deze aanpassingen voerde ik uit door HTML-code toe te voegen of aan te passen in het programma Visual Studio Code.
+                        Dit kun je in de link hieronder zien.
+                        Dier staat namelijk een filmpje in van defqon.1 en twee foto's van de podiums op defqon.1.
                         Deze ervaring heeft mijn begrip van het bouwen van websites aanzienlijk vergroot. 
                     </p>
                     <p> In de onderstaande link is de door mij gemaakte site weergegeven:</p>
