veranderd voor marielle

--- a/Hieke/Weerstation/Weerstation.html
+++ b/Hieke/Weerstation/Weerstation.html
@@ -9,7 +9,7 @@
 	body {
 		font-family: 'Montserrat', sans-serif;
 		font-weight: 400;
-		font-size: 2cm;
+		font-size: 1.3em;
 		color: #fff;
 		text-shadow: .1em .1em 0 rgba(0,0,0,0.3);
 		height: 100vh;
@@ -29,7 +29,7 @@
 		background-image: linear-gradient(to right top, #ff4e50, #ff713e, #ff932b, #ffb41d, #f9d423);
 	}
 	body.cloudy {
-		background-image: linear-gradient(to right top, #ca1a1a, #f19711, #ecf724, #31fc31, #61cef5);
+		background-image: linear-gradient(to right top, #63747c, #71858e, #7f96a0, #8da8b2, #9bbac5);
 	}
 	body.rainy {
 		background-image: linear-gradient(to right top, #637c7b, #718e8c, #7ea09e, #8db2b0, #9bc5c3);
