verandering weerstation en nasa van de dag

--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -201,15 +201,15 @@
                     <p> In de onderstaande figuren is zowel het live weerbericht in Willemstad (Curaçoa) als de NASA foto van de dag:</p>
                     <div class="main-hieke">
                         <h2>Het weerstation</h2>
-                        <iframe src="http://127.0.0.1:5500/Hieke/Weerstation.html" name="weerstation">
+                        <iframe src="Hieke\Weerstation\Weerstation.html" name="weerstation">
                             <p>Deze browser ondersteunt geen iFrames.</p>
-                            <p>Open deze <a href="http://127.0.0.1:5500/Hieke/Weerstation.html" target="_blank">link</a> om het weerstation in te zien.</p>
+                            <p>Open deze <a href="Hieke\Weerstation\Weerstation.html" target="_blank">link</a> om het weerstation in te zien.</p>
                         </iframe>
 
                         <h2>NASA photo of the day</h2>
-                        <iframe src="http://127.0.0.1:5500/Hieke/NASA%20foto%20van%20vandaag.html" name="NASA photo of the day">
+                        <iframe src="Hieke\Nasa van de dag\NASA foto van vandaag.html" name="NASA photo of the day">
                             <p>Deze browser ondersteunt geen iFrames.</p>
-                            <p>Open deze <a href="http://127.0.0.1:5500/Hieke/NASA%20foto%20van%20vandaag.html" target="_blank">link</a> om de NASA 
+                            <p>Open deze <a href="Hieke\Nasa van de dag\NASA foto van vandaag.html" target="_blank">link</a> om de NASA 
                                 photo of the day te zien.</p>
                         </iframe>
                     <h2>Bedrijfbezoek Elk</h2>
