verandering TOM model

--- a/hieke_workshops.html
+++ b/hieke_workshops.html
@@ -82,6 +82,23 @@
                         <p>Open deze <a href="files/business-model-canvas Giesbers.pdf" target="_blank">link</a> om het BMC van Giesbers in te zien.</p>
                     </iframe>
 
+                    <h4>Het operationele model volgens TOM</h4>
+                    <p> Tijdens de les over het TOM-model heb ik de volgende aantekeningen gemaakt: In harmonie met elkaar bewegen de negen domeinen flexibel om een optimale operationele levering te bereiken.
+                        Het uitgangspunt binnen deze methodiek is dat een organisatie bestaat uit een samenwerking van Mens, Machine en Methode, over de 3 lagen van bedrijfsstrategie, tactische aansturing en operationele uitvoering.
+                        Het model maakt snel inzichtelijk hoe relaties binnen en tussen de verschillende vlakken verlopen.
+                        Het is van belang te benadrukken dat alle vlakken en niveaus invloed op elkaar uitoefenen, elkaar versterken of juist tegenwerken.
+                        De ontwikkeling van de methode heeft tot doel snel inzicht te creëren in operationele organisaties of om een efficiënt ontwerp en ontwikkeling van organisaties te faciliteren. 
+                        Na deze informatie te hebben gekregen heeft de gastspreker (paul Kalis) een voorbeeld gegeven van een TOM-model voor een bedrijf van een tuinman.
+                    </p>
+
+                    <p> Wat ik van deze les geleerd heb is dat het begrijpen van deze leiderschapsstijlen kan bijdragen aan mijn professionele ontwikkeling door me bewust te maken van het effectiever navigeren binnen organisaties.
+                        Ik heb ervan geleerd hoe ik een balans kan vinden tussen leiderschap, het stellen van duidelijke doelen en het aanpassen aan veranderende omstandigheden.
+                        Het TOM-model heeft mij daarnaast ook nog inzicht gegeven in het bevorderen van een positieve bedrijfscultuur.
+                        Vervolgens kregen we de opdracht om in onze groepjes het TOM-model zelf in te vullen voor het bedrijf waarvoor je ging werken.
+                        Dit was nog best lastig maar uiteindelijk zijn we er samen uit gekomen.
+                        Hieronder zie je ook nog een afbeelding van het TOM- model die ik met Matilda en Tomas heb ingevuld over Giesbers.
+                    </p>
+                    <img class="logo" src="Hieke\afbeelding\TOM-model.png" alt="TOM model" width="300" height="200"> 
 
             <h2>Smart Technology</h2>
             <p> Tijdens de lessen van Smart Technology zijn er veel verschillende aspecten aangekaart door de docenten maar ook door gastsprekers.
